--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,25 @@
-#Sun Jun 28 21:25:13 GMT+08:00 2015
+#
+# /*
+#  *
+#  *  *
+#  *  *  * ===================================
+#  *  *  * Copyright (c) 2016.
+#  *  *  * 作者：安卓猴
+#  *  *  * 微博：@安卓猴
+#  *  *  * 博客：http://sunjiajia.com
+#  *  *  * Github：https://github.com/opengit
+#  *  *  *
+#  *  *  * 注意**：如果您使用或者修改该代码，请务必保留此版权信息。
+#  *  *  * ===================================
+#  *  *
+#  *  *
+#  *
+#  */
+#
+
+#Fri Apr 29 16:20:43 CST 2016
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.4-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.10-all.zip
