--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,20 @@
+/*
+ *
+ *  *
+ *  *  *
+ *  *  *  * ===================================
+ *  *  *  * Copyright (c) 2016.
+ *  *  *  * 作者：安卓猴
+ *  *  *  * 微博：@安卓猴
+ *  *  *  * 博客：http://sunjiajia.com
+ *  *  *  * Github：https://github.com/opengit
+ *  *  *  *
+ *  *  *  * 注意**：如果您使用或者修改该代码，请务必保留此版权信息。
+ *  *  *  * ===================================
+ *  *  *
+ *  *  *
+ *  *
+ *
+ */
+
 include ':app'
