--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,28 +1,47 @@
+/*
+ *
+ *  *
+ *  *  *
+ *  *  *  * ===================================
+ *  *  *  * Copyright (c) 2016.
+ *  *  *  * 作者：安卓猴
+ *  *  *  * 微博：@安卓猴
+ *  *  *  * 博客：http://sunjiajia.com
+ *  *  *  * Github：https://github.com/opengit
+ *  *  *  *
+ *  *  *  * 注意**：如果您使用或者修改该代码，请务必保留此版权信息。
+ *  *  *  * ===================================
+ *  *  *
+ *  *  *
+ *  *
+ *
+ */
+
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "23.0.0 rc2"
+  compileSdkVersion 23
+  buildToolsVersion '23.0.2'
 
-    defaultConfig {
-        applicationId "com.sunjiajia.androidnewwidgetsdemo"
-        minSdkVersion 14
-        targetSdkVersion 22
-        versionCode 1
-        versionName "1.0"
+  defaultConfig {
+    applicationId "com.sunjiajia.androidnewwidgetsdemo"
+    minSdkVersion 14
+    targetSdkVersion 22
+    versionCode 1
+    versionName "1.0"
+  }
+  buildTypes {
+    release {
+      minifyEnabled false
+      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
+  }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.android.support:design:22.2.0'
-    compile 'com.android.support:cardview-v7:22.2.0'
-    compile 'com.android.support:recyclerview-v7:22.2.0'
+  compile fileTree(dir: 'libs', include: ['*.jar'])
+  compile 'com.android.support:appcompat-v7:23.3.0'
+  compile 'com.android.support:design:23.3.0'
+  compile 'com.android.support:cardview-v7:23.3.0'
+  compile 'com.android.support:recyclerview-v7:23.3.0'
 }
