--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,22 @@
+/*
+ *
+ *  *
+ *  *  *
+ *  *  *  * ===================================
+ *  *  *  * Copyright (c) 2016.
+ *  *  *  * 作者：安卓猴
+ *  *  *  * 微博：@安卓猴
+ *  *  *  * 博客：http://sunjiajia.com
+ *  *  *  * Github：https://github.com/opengit
+ *  *  *  *
+ *  *  *  * 注意**：如果您使用或者修改该代码，请务必保留此版权信息。
+ *  *  *  * ===================================
+ *  *  *
+ *  *  *
+ *  *
+ *
+ */
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
@@ -5,7 +24,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.2.3'
+        classpath 'com.android.tools.build:gradle:2.+'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
