--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,22 @@
+#
+# /*
+#  *
+#  *  *
+#  *  *  * ===================================
+#  *  *  * Copyright (c) 2016.
+#  *  *  * 作者：安卓猴
+#  *  *  * 微博：@安卓猴
+#  *  *  * 博客：http://sunjiajia.com
+#  *  *  * Github：https://github.com/opengit
+#  *  *  *
+#  *  *  * 注意**：如果您使用或者修改该代码，请务必保留此版权信息。
+#  *  *  * ===================================
+#  *  *
+#  *  *
+#  *
+#  */
+#
+
 # Project-wide Gradle settings.
 
 # IDE (e.g. Android Studio) users:
